--- a/src/app/public/public.component.scss
+++ b/src/app/public/public.component.scss
@@ -1,16 +1,5 @@
 :host {
-  a {
-    text-decoration: none;
-    &:focus,
-    &:link,
-    &:visited,
-    &:hover,
-    &:active {
-      color: #fff;
-    }
-  }
-  .content {
-    min-height: calc(100vh - 128px);
+  .wrapper {
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
