Changed search implementation

--- a/src/app/public/epmloyees/employees.component.html
+++ b/src/app/public/epmloyees/employees.component.html
@@ -83,7 +83,7 @@
               matInput
               placeholder="search"
               autocomplete="off"
-              (keyup)="filterData($event)"
+              (keyup)="keyUp.next($event)"
             />
           </mat-form-field>
         </div>
