--- a/src/app/shared/components/mat-confirm-dialog/mat-confirm-dialog.component.html
+++ b/src/app/shared/components/mat-confirm-dialog/mat-confirm-dialog.component.html
@@ -1,7 +1,6 @@
 <div>
   <div class="content-container">
-    <!-- // TODO -->
-    <mat-icon id="close-icon" (click)="closeDialog()">close</mat-icon>
+    <mat-icon id="close-icon" [mat-dialog-close]>close</mat-icon>
     <span class="content-span full-width">{{ data.message }}</span>
   </div>
   <button mat-flat-button id="no-button" [mat-dialog-close]="false">
